--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
   form_field_validator: ^1.0.1
-  firebase_auth: ^0.14.0+5
-  cloud_firestore: ^0.12.9+4
-  provider: ^4.0.0
+  firebase_auth: ^3.0.1
+  firebase_core: ^1.4.0
+  cloud_firestore: ^2.4.0
+  provider: ^6.0.0
+  firebase_analytics: ^8.2.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
